library/fdk-aac-rs/fdk-aac-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_CStreamInfo() {
    assert_eq!(
        ::std::mem::size_of::<CStreamInfo>(),
        128usize,
        concat!("Size of: ", stringify!(CStreamInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<CStreamInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(CStreamInfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).sampleRate as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(sampleRate)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).frameSize as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(frameSize)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).numChannels as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(numChannels)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).pChannelType as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(pChannelType)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).pChannelIndices as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(pChannelIndices)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).aacSampleRate as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(aacSampleRate)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).profile as *const _ as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(profile)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).aot as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(aot)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).channelConfig as *const _ as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(channelConfig)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).bitRate as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(bitRate)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).aacSamplesPerFrame as *const _ as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(aacSamplesPerFrame)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).aacNumChannels as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(aacNumChannels)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).extAot as *const _ as usize },
        60usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(extAot)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).extSamplingRate as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(extSamplingRate)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).outputDelay as *const _ as usize },
        68usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(outputDelay)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).flags as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).epConfig as *const _ as usize },
        76usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(epConfig)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).numLostAccessUnits as *const _ as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(numLostAccessUnits)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).numTotalBytes as *const _ as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(numTotalBytes)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).numBadBytes as *const _ as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(numBadBytes)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).numTotalAccessUnits as *const _ as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(numTotalAccessUnits)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).numBadAccessUnits as *const _ as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(numBadAccessUnits)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).drcProgRefLev as *const _ as usize },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(drcProgRefLev)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<CStreamInfo>())).drcPresMode as *const _ as usize },
        121usize,
        concat!(
            "Offset of field: ",
            stringify!(CStreamInfo),
            "::",
            stringify!(drcPresMode)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AAC_DECODER_INSTANCE {
    _unused: [u8; 0],
}
pub type HANDLE_AACDECODER = *mut AAC_DECODER_INSTANCE;
extern "C" {
    #[doc = " \\brief Initialize ancillary data buffer."]
    #[doc = ""]
    #[doc = " \\param self    AAC decoder handle."]
    #[doc = " \\param buffer  Pointer to (external) ancillary data buffer."]
    #[doc = " \\param size    Size of the buffer pointed to by buffer."]
    #[doc = " \\return        Error code."]
    pub fn aacDecoder_AncDataInit(
        self_: HANDLE_AACDECODER,
        buffer: *mut UCHAR,
        size: ::std::os::raw::c_int,
    ) -> AAC_DECODER_ERROR;
}
extern "C" {
    #[doc = " \\brief Get one ancillary data element."]
    #[doc = ""]
    #[doc = " \\param self   AAC decoder handle."]
    #[doc = " \\param index  Index of the ancillary data element to get."]
    #[doc = " \\param ptr    Pointer to a buffer receiving a pointer to the requested"]
    #[doc = " ancillary data element."]
    #[doc = " \\param size   Pointer to a buffer receiving the length of the requested"]
    #[doc = " ancillary data element."]
    #[doc = " \\return       Error code."]
    pub fn aacDecoder_AncDataGet(
        self_: HANDLE_AACDECODER,
        index: ::std::os::raw::c_int,
        ptr: *mut *mut UCHAR,
        size: *mut ::std::os::raw::c_int,
    ) -> AAC_DECODER_ERROR;
}
extern "C" {
    #[doc = " \\brief Set one single decoder parameter."]
    #[doc = ""]
    #[doc = " \\param self   AAC decoder handle."]
    #[doc = " \\param param  Parameter to be set."]
    #[doc = " \\param value  Parameter value."]
    #[doc = " \\return       Error code."]
    pub fn aacDecoder_SetParam(
        self_: HANDLE_AACDECODER,
        param: AACDEC_PARAM,
        value: INT,
    ) -> AAC_DECODER_ERROR;
}
extern "C" {
    #[doc = " \\brief              Get free bytes inside decoder internal buffer."]
    #[doc = " \\param self         Handle of AAC decoder instance."]
    #[doc = " \\param pFreeBytes   Pointer to variable receiving amount of free bytes inside"]
    #[doc = " decoder internal buffer."]
    #[doc = " \\return             Error code."]
    pub fn aacDecoder_GetFreeBytes(
        self_: HANDLE_AACDECODER,
        pFreeBytes: *mut UINT,
    ) -> AAC_DECODER_ERROR;
}
extern "C" {
    #[doc = " \\brief               Open an AAC decoder instance."]
    #[doc = " \\param transportFmt  The transport type to be used."]
    #[doc = " \\param nrOfLayers    Number of transport layers."]
    #[doc = " \\return              AAC decoder handle."]
    pub fn aacDecoder_Open(transportFmt: TRANSPORT_TYPE, nrOfLayers: UINT) -> HANDLE_AACDECODER;
}
extern "C" {
    #[doc = " \\brief Explicitly configure the decoder by passing a raw AudioSpecificConfig"]
    #[doc = " (ASC) or a StreamMuxConfig (SMC), contained in a binary buffer. This is"]
    #[doc = " required for MPEG-4 and Raw Packets file format bitstreams as well as for"]
    #[doc = " LATM bitstreams with no in-band SMC. If the transport format is LATM with or"]
    #[doc = " without LOAS, configuration is assumed to be an SMC, for all other file"]
    #[doc = " formats an ASC."]
    #[doc = ""]
    #[doc = " \\param self    AAC decoder handle."]
    #[doc = " \\param conf    Pointer to an unsigned char buffer containing the binary"]
    #[doc = " configuration buffer (either ASC or SMC)."]
    #[doc = " \\param length  Length of the configuration buffer in bytes."]
    #[doc = " \\return        Error code."]
    pub fn aacDecoder_ConfigRaw(
        self_: HANDLE_AACDECODER,
        conf: *mut *mut UCHAR,
        length: *const UINT,
    ) -> AAC_DECODER_ERROR;
}
extern "C" {
    #[doc = " \\brief Submit raw ISO base media file format boxes to decoder for parsing"]
    #[doc = " (only some box types are recognized)."]
    #[doc = ""]
    #[doc = " \\param self    AAC decoder handle."]
    #[doc = " \\param buffer  Pointer to an unsigned char buffer containing the binary box"]
    #[doc = " data (including size and type, can be a sequence of multiple boxes)."]
    #[doc = " \\param length  Length of the data in bytes."]
    #[doc = " \\return        Error code."]
    pub fn aacDecoder_RawISOBMFFData(
        self_: HANDLE_AACDECODER,
        buffer: *mut UCHAR,
        length: UINT,
    ) -> AAC_DECODER_ERROR;
}
